<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/activity_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="220dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/welcome_back" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:startIconDrawable="@drawable/baseline_account_circle_24"
        app:endIconMode="clear_text"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextForName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_your_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:startIconDrawable="@drawable/baseline_email_24"
        app:endIconMode="clear_text"
        android:background="@drawable/edit_text_background"
        android:layout_margin="20sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextForEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_your_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBoxForTermsAndConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25sp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/i_agree_to_all_t_amp_c" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonForSignIn"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="20sp"
            android:background="@drawable/button_background"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/buttonForCancel"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="25sp"
            android:background="@drawable/button_background"
            android:text="@string/cancel" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="150dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#b4f924"
        android:text="@string/com_ritikcoder" />

</LinearLayout>